crates/service/tests/code_action/snapshots/features__code_action__fix_asymmetric_ident__comments.snap
---
source: crates/service/tests/code_action/fix_asymmetric_ident.rs
expression: response
---
[
  {
    "title": "Remove identifier `$b`",
    "kind": "quickfix",
    "isPreferred": true,
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 18
              },
              "end": {
                "line": 3,
                "character": 21
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
