crates/service/tests/code_action/snapshots/features__code_action__fix_asymmetric_ident__excess_in_try_table.snap
---
source: crates/service/tests/code_action/fix_asymmetric_ident.rs
expression: response
---
[
  {
    "title": "Remove identifier `$t`",
    "kind": "quickfix",
    "isPreferred": true,
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 3,
                "character": 17
              },
              "end": {
                "line": 3,
                "character": 20
              }
            },
            "newText": ""
          }
        ]
      }
    }
  }
]
